automating creation of character figures

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Orbitron:900|Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Orbitron:400,900|Roboto&display=swap" rel="stylesheet">
 
     <!-- Stylesheets-->
     <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
@@ -31,12 +31,15 @@
     <!-- Article -->
     <article>
         <!-- Character Choice-->
-        <section id="player" class="panel">
+        <section class="panel">
             <h2>Choose Your Character</h2>
+            <section id="player-selection" class="panel-content">
+
+            </section>
         </section>
 
         <!-- Enemies -->
-        <section id="enemies" class="panel">
+        <section id="enemy-selection" class="panel">
             <h2>Choose An Opponent</h2>
         </section>
 
@@ -64,6 +67,6 @@
     </footer>
 
     <!-- Scripts -->
-    <script type="text/css" src="assets/javascript/game.js"></script>
+    <script type="text/javascript" src="assets/javascript/game.js"></script>
 </body>
 </html>
