setup the character generation stuff in preparation for battle

--- a/index.html
+++ b/index.html
@@ -31,27 +31,30 @@
     <!-- Article -->
     <article>
         <!-- Character Choice-->
-        <section class="panel">
+        <section id="player-selection" class="panel">
             <h2>Choose Your Character</h2>
-            <section id="player-selection" class="panel-content">
+            <section class="panel-content">
 
             </section>
         </section>
 
         <!-- Enemies -->
-        <section id="enemy-selection" class="panel">
+        <section id="enemy-selection" class="panel hide">
             <h2>Choose An Opponent</h2>
+            <section class="panel-content">
+                
+            </section>
         </section>
 
         <!-- Battlezone -->
         <section>
             <!-- Combatants -->
-            <section id="battle" class="panel">
+            <section id="battle" class="panel hide">
                 <h2>Battlezone</h2>
             </section>
 
             <!-- Combat Log-->
-            <section id="log" class="panel">
+            <section id="log" class="panel hide">
                 <h2>Combat Log</h2>
 
                 <p id="result">&nbsp;</p>
