set up the battle panel and created an attack button

--- a/index.html
+++ b/index.html
@@ -33,17 +33,13 @@
         <!-- Character Choice-->
         <section id="player-selection" class="panel">
             <h2>Choose Your Character</h2>
-            <section class="panel-content">
-
-            </section>
+            <section class="panel-content"> </section>
         </section>
 
         <!-- Enemies -->
         <section id="enemy-selection" class="panel hide">
             <h2>Choose An Opponent</h2>
-            <section class="panel-content">
-                
-            </section>
+            <section class="panel-content"> </section>
         </section>
 
         <!-- Battlezone -->
@@ -51,13 +47,13 @@
             <!-- Combatants -->
             <section id="battle" class="panel hide">
                 <h2>Battlezone</h2>
+                <section class="panel-content"> </section>
             </section>
 
             <!-- Combat Log-->
             <section id="log" class="panel hide">
                 <h2>Combat Log</h2>
-
-                <p id="result">&nbsp;</p>
+                <section class="panel-content"> </section>
             </section>
         </section>
 
