just pushing most recent changes to take home

--- a/index.html
+++ b/index.html
@@ -47,7 +47,11 @@
             <!-- Combatants -->
             <section id="battle" class="panel hide">
                 <h2>Battlezone</h2>
-                <section class="panel-content"> </section>
+                <section class="panel-content">
+                    <figure id="player"></figure>
+                    <button id="attack">Attack!</button>
+                    <figure id="enemy"></figure>
+                </section>
             </section>
 
             <!-- Combat Log-->
