Did I finally make this crazy thing work?

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
             <section id="battle" class="panel hide">
                 <h2>Battlezone</h2>
                 <section class="panel-content">
-                    <figure id="player"></figure>
+                    <figure id="player" class="character"></figure>
                     <button id="attack">Attack!</button>
-                    <figure id="enemy"></figure>
+                    <figure id="enemy" class="character"></figure>
                 </section>
             </section>
 
